python-server-main/k8s/traefik/service.yaml
# traefik Service
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer   # ✅ 반드시 추가!
  selector:
    app: traefik
  ports:
    - port: 80
      targetPort: 80
      name: web
    - port: 8080
      targetPort: 8080
      name: admin
